v0.1.0-alpha.25/_sources/autoapi/ape/cli/options/index.rst.txt
:mod:`ape.cli.options`
======================

.. py:module:: ape.cli.options




.. raw:: html

   <h3>Module Contents</h3>

**Classes**:

.. autoapisummary::

   ape.cli.options.ApeCliContextObject



**Functions**:

.. autoapisummary::

   ape.cli.options.verbosity_option
   ape.cli.options.ape_cli_context
   ape.cli.options.skip_confirmation_option



**Attributes**:

.. autoapisummary::

   ape.cli.options.network_option



-----------


.. py:class:: ApeCliContextObject

   A class that can be auto-imported into a plugin ``click.command()``
   via ``@ape_cli_context()``. It can help do common CLI tasks such as log
   messages to the user or abort execution.

   .. py:method:: __init__(self)


   .. py:method:: abort(msg: str, base_error: Exception = None)
      :staticmethod:





.. py:function:: verbosity_option(cli_logger)

   A decorator that adds a `--verbosity, -v` option to the decorated
   command.




.. py:function:: ape_cli_context()




.. data:: network_option
   

   



.. py:function:: skip_confirmation_option(help='')



